Reports/Experiment_Data_Sat_Jul__8_22:17:44_UTC_2017/Performance_Results/classes/swift.txt

real	0m5.852s
user	0m2.146s
sys	0m1.512s
temp//classes/swift/classes-2.swift:1:1: error: use of unresolved identifier 'MyClass'
MyClass()
^~~~~~~
Swift.AnyClass:30:18: note: did you mean 'AnyClass'?
public typealias AnyClass = AnyObject.Type
                 ^

real	0m0.053s
user	0m0.027s
sys	0m0.023s
